test/langtools/tools/javac/finalLoopVars/FinalLoopVarsEffectivelyFinal.out
FinalLoopVarsEffectivelyFinal.java:17:49: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
1 error
